Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -58,32 +58,62 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "n4AlkFTthXEu"
-      },
-      "source": [
-        "# マークダウンとマークダウン中の latex と %%latex が混乱している!!!!"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "M_IYHSO3fN5l"
       },
       "source": [
         "# メモ\n",
         "colab で latex を勉強する。\n",
         "\n",
-        "colabで latex を書くには 3 通りある。\n",
+        "colab でテキストセル内で &dollar; マークを使うと数式を latex で処理して美しく表示できる。\n",
+        "$$ \\int f(x)dx $$\n",
+        "とか。\n",
         "\n",
-        "1. テキストセル内でマークダウンで &dollar; マークを使って書く\n",
-        "2. コードセル内で `%%latex` マジックを使って書く\n",
-        "3. コードセル内で IPython.display.Markdown で書く\n",
+        "これを latex でどう書いているかは、セルをダブルクリックするかセルを選択して Ctrl+Enter を押して、編集モードにすることで見ることができる。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5FDxKNL9mZED"
+      },
+      "source": [
+        "もっと明示的にコードセルで `%%latex` マジックを使って書くことができる。\n",
         "\n",
-        "マークダウンで書くのが基本。  \n",
+        "この場合はコードセルをセルの左側の丸に右向き三角の実行ボタンを押すか、Ctrl+Enter で実行して出力としてレンダリングされた表示を見ることになる。\n",
         "\n",
         "colab の latex は完全な latex ではない。 mathjax ベースのサブセットである。 数式を書くのに便利。\n",
         "\n",
-        "sympy と IPython を使うのはプログラムがメインのときなので、このノートブックでは課題の解答の中に説明を加えたいときなどに使う。\n"
+        "このノートブックではテキストセルで表示して同じことを、コードセルで実行できるようにすることで、いちいち編集モードに入らずに読み進められるようにしたい。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "StwWQ1xuncNF",
+        "outputId": "08ac08fd-0225-4212-9a3f-1040d7093f62",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "source": [
+        "%%latex\n",
+        "\\int f(x)dx"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\int f(x)dx",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
@@ -93,8 +123,7 @@
       },
       "source": [
         "# 参考サイト\n",
-        "\n",
-        "1. 参考サイトを読みながら latex を勉強する。  \n",
+        " \n",
         "TeX入門 ( http://www.comp.tmu.ac.jp/tsakai/lectures/intro_tex.html )  \n",
         "TeX入門Wiki ( https://texwiki.texjp.org/)  \n",
         "Learn LaTeX in 30 minutes ( https://www.overleaf.com/learn/latex/ \n",
@@ -161,12 +190,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wOsNxaXaXPUy",
-        "outputId": "d33a343f-27a7-4d39-a676-95d84d30f2cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "wOsNxaXaXPUy",
+        "outputId": "d33a343f-27a7-4d39-a676-95d84d30f2cd"
       },
       "source": [
         "# コードセルで %%latex で表示する\n",
@@ -203,7 +232,7 @@
         "outputId": "66922116-5978-4ac1-c3fe-d0d76f9c4d0d"
       },
       "source": [
-        "# 実験 python プログラムで表示する\n",
+        "# 実験 python プログラムで表示することもできる。このノートブックでは学習対象としない。\n",
         "from sympy import *\n",
         "from IPython.display import Markdown\n",
         "display(Markdown(\"実験学習 $x = 3$ と書く\"))\n",
