Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -627,40 +627,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2L5wOq-9vUJu",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "outputId": "84ad8202-937e-443f-d604-7bd95493917b"
-      },
-      "source": [
-        "%%latex\n",
-        "\\displaystyle\n",
-        "\\frac{\\pi}{2} \\\\\n",
-        "= \\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2 \\\\\n",
-        "= \\sum_{k=0}^{\\infty} \\frac{(2k)!}{2^{2k}(k!)^2} \\frac{1}{2k+1} \\\\\n",
-        "= \\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}\n"
-      ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\displaystyle\n\\frac{\\pi}{2} \\\\\n= \\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2 \\\\\n= \\sum_{k=0}^{\\infty} \\frac{(2k)!}{2^{2k}(k!)^2} \\frac{1}{2k+1} \\\\\n= \\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NgmgaN0pnnAY"
@@ -678,65 +644,23 @@
         "マークダウンで英文字は   \n",
         "abcdefABC  \n",
         "となるが、ドルサインで囲って latex にすると、数学用のフォントになる。  \n",
-        "$This is math standard font abcdefABC$  \n",
+        "$abcdefABC$  \n",
         "この latex のなかで text とすると数学フォントではなくなる。  \n",
         "$\\text{This is a text}$  \n",
-        "これを mathit とすると数学用のフォントになる。  \n",
-        "$\\mathit{\\text{This is math italian abcdefABC}}$  \n",
-        "スペースも機能するのでいいかもしれない。\n",
         "\n",
-        "$\\mathrm{\\text{This is mathrm -> abcABC}}$  \n",
-        "$\\mathit{\\text{This is mathit -> abcABC}}$  \n",
+        "* latex -> $abcdefABC$ $\\quad$ 通常の数式書体\n",
+        "* \\mathrm -> $\\mathrm{abcdefABC}$   $\\quad$ sin, cos など数式\n",
+        "* \\pmb -> $\\pmb{abcdefABC}$ $\\quad$ ベクトルに使う\n",
+        "* \\mathbf -> $\\mathbf{abcdefABC}$ $\\quad$ $\\mathbf{NZRC}$\n",
+        "* \\mathbb -> $\\mathbb{abcdefABC}$ $\\quad$ $\\mathbb{NZRC}$\n",
+        "* \\mathcal -> $\\mathcal{abcdefABC}$   $\\quad$ \n",
+        "* \\mathfrak -> $\\mathfrak{abcdefABC}$   $\\quad$ \n",
         "\n",
         "数学のテキストでのアルファベットの使い分けは通常はイタリックで、座標とかはセリフ付きのローマン体の大文字が使われている。 ベクトルを小文字で表すときに上矢印をつけずにボールド体を使うことがある。\n",
         "\n",
         "手書きで部分白抜きを真似た mathbb というのもあって、これで書かれたテキストもある。\n",
         "\n",
-        "$\\mathbf{\\text{This is mathbf -> abcABC}}$  \n",
-        "$\\mathbb{\\text{This is mathbb -> abcABC}}$  \n",
-        "$\\mathcal{\\text{This is mathcal -> abcABC}}$  \n",
-        "$\\mathfrak{\\text{This is mathfrak -> abcABC}}$  "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iWBQ3wdyhf7X",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 246
-        },
-        "outputId": "bb3289b8-d850-4388-f834-8dd8e6d14178"
-      },
-      "source": [
-        "%%latex\n",
-        "abcdefABC\\\\\n",
-        "\\mathrm{a b c d e f A B C}\\\\\n",
-        "\\mathbf{a b c d e f A B C} \\\\ %%ベクトルに使う。NZRC に使う\n",
-        "\\pmb{a b c d e f A B C} \\\\ %%ベクトルに使う poor man's bold\n",
-        "\\bm{a b c d e f A B C }\\\\ %% \n",
-        "\\text{a b c d e f A B C }\\\\\n",
-        "\\mathbb{a b c d e f A B C }\\\\ %%ベクトルに使う。NZRC に使う。board bold 黒板太字\n",
-        "% \\mathbbm{a b c d e f A B C }\\\\\n",
-        "\\mathcal {abcdefABCDEF}\\\\\n",
-        "\\mathfrak {abcdefABCDEF}\\\\\n",
-        "\\mathit {abcdefABCDEF}\\\\\n",
-        "\\mathrm{\\text{this is a pen.}}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "abcdefABC\\\\\n\\mathrm{a b c d e f A B C}\\\\\n\\mathbf{a b c d e f A B C} \\\\ %%ベクトルに使う\n\\pmb{a b c d e f A B C} \\\\ %%ベクトルに使う\n\\bm{a b c d e f A B C }\\\\ %% \n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n% \\mathbbm{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\\n\\mathrm{\\text{this is a pen.}}",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "&nbsp;"
       ]
     },
     {
@@ -768,9 +692,9 @@
         "id": "FbVx5XVeB0lT",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 90
         },
-        "outputId": "e4f63aa0-d636-470b-941e-c49cbda3fb14"
+        "outputId": "cff8a7c6-646a-43c0-86e2-851a257ea33a"
       },
       "source": [
         "%%latex\n",
@@ -779,14 +703,19 @@
         "    a_{11} & \\ldots & a_{1n} \\\\\n",
         "    \\vdots & \\ddots & \\vdots \\\\\n",
         "    a_{m1} & \\ldots & a_{mn}\n",
-        "\\end{pmatrix}"
+        "\\end{pmatrix} \\quad\n",
+        "A =\\begin{bmatrix}\n",
+        "    a_{11} & \\ldots & a_{1n} \\\\\n",
+        "    \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{m1} & \\ldots & a_{mn}\n",
+        "\\end{bmatrix}"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\nA =\\begin{pmatrix}\n    a_{11} & \\ldots & a_{1n} \\\\\n    \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & \\ldots & a_{mn}\n\\end{pmatrix}",
+            "text/latex": "\\displaystyle\nA =\\begin{pmatrix}\n    a_{11} & \\ldots & a_{1n} \\\\\n    \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & \\ldots & a_{mn}\n\\end{pmatrix} \\quad\nA =\\begin{bmatrix}\n    a_{11} & \\ldots & a_{1n} \\\\\n    \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & \\ldots & a_{mn}\n\\end{bmatrix}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -804,41 +733,6 @@
       },
       "source": [
         "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9tZ1VC3OYWcA",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 89
-        },
-        "outputId": "45749101-db34-480a-d3bc-5f9dea5be309"
-      },
-      "source": [
-        "%%latex\n",
-        "\\displaystyle\n",
-        "A =\\begin{bmatrix}\n",
-        "    a_{11} & \\ldots & a_{1n} \\\\\n",
-        "    \\vdots & \\ddots & \\vdots \\\\\n",
-        "    a_{m1} & \\ldots & a_{mn}\n",
-        "\\end{bmatrix}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\displaystyle\nA =\\begin{bmatrix}\n    a_{11} & \\ldots & a_{1n} \\\\\n    \\vdots & \\ddots & \\vdots \\\\\n    a_{m1} & \\ldots & a_{mn}\n\\end{bmatrix}",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
       ]
     },
     {
