Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -877,15 +877,48 @@
         "id": "jZ4nUZbeqf2I"
       },
       "source": [
-        "# array, eqnarray, \n",
-        "$\n",
+        "# array, eqnarray, align\n",
+        "$$\n",
         "\\begin{array}{lcl}\n",
+        "    \\displaystyle \\int_{0}^{1} \\log x dx\n",
+        "     & = \\quad & \\displaystyle  \\lim_{\\epsilon \\to +0} \\int_{\\epsilon}^{1} \\log x dx \\\\\n",
+        "     & = & \\displaystyle \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1} \\\\\n",
+        "     & = & -1\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "&nbsp;\n",
+        "$$\n",
+        "\\begin{eqnarray}\n",
         "    \\int_{0}^{1} \\log x dx\n",
         "     & = & \\displaystyle \\lim_{\\epsilon \\to +0} \\int_{\\epsilon}^{1} \\log x dx \\\\\n",
         "     & = & \\displaystyle \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1} \\\\\n",
         "     & = & -1\n",
-        "\\end{array}\n",
-        "$"
+        "\\end{eqnarray}\n",
+        "$$\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "    \\int_{0}^{1} \\log x dx\n",
+        "     & = & \\displaystyle \\lim_{\\epsilon \\to +0} \\int_{\\epsilon}^{1} \\log x dx \\\\\n",
+        "     & = & \\displaystyle \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1} \\\\\n",
+        "     & = & -1\n",
+        "\\end{align}\n",
+        "$$\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "\\int_1^x \\{ye^{-t^2}\\}'dt &=&\\int_1^x e^{-t^2}tdt \\\\\n",
+        "\\left[ye^{-t^2}\\right]_1^x &=& \\left[-{1\\over 2}e^{-t^2}\\right]_1^x \\\\\n",
+        "ye^{-x^2}-2e^{-1} &=& -{1\\over 2}e^{-x^2}+{1\\over 2}e^{-1} \\\\\n",
+        "ye^{-x^2} &=& -{1\\over 2}e^{-x^2}+{5\\over 2}e^{-1}\n",
+        "\\end{align}\n",
+        "$$"
       ]
     },
     {
