--- a/math_sympy_short.ipynb
+++ b/math_sympy_short.ipynb
@@ -6,7 +6,7 @@
       "name": "math_sympy_short.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMO/8ql9weahMYLfFRSL5Uk",
+      "authorship_tag": "ABX9TyPiql1yZzsEgXVJGKMBtG6R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1124,8 +1124,8 @@
         "import numpy as np\n",
         "x = np.linspace(-10, 10, 100) # 100に刻む\n",
         "fig, ax = plt.subplots()  # figure と ax を作る\n",
-        "ax.spines['left'].set_position(('data', 0))\n",
-        "ax.spines['right'].set_visible(False)\n",
+        "ax.spines['left'].set_position(('data', 0)) # 座標の位置を変える\n",
+        "ax.spines['right'].set_visible(False) # 座標を見えなくする\n",
         "ax.spines['top'].set_visible(False)\n",
         "ax.spines['bottom'].set_position(('data', 0))\n",
         "ax.set_xlabel('x')  # x軸のラベル\n",
@@ -1178,11 +1178,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YHag0vFlGltu",
-        "outputId": "db7cb790-cd75-49ad-a897-27bcea1030ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 251
-        }
+        },
+        "outputId": "db7cb790-cd75-49ad-a897-27bcea1030ee"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1198,7 +1198,7 @@
         "ax.plot(x, x + np.cos(x))  # cos は numpy の cos を使うので注意\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
