Colaboratory を使用して作成しました

--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOeEfZlJbD64BiobgqzSoTM",
+      "authorship_tag": "ABX9TyMEJKx+7Xm0R/vLF/xzSNRf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "%%capture\n",
         "!pip install japanize_matplotlib"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
         "# plt.savefig(\"temp.svg\", format=\"svg\")\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,7 +154,7 @@
         "# from google.colab import files\n",
         "# files.download('temp.svg')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
         "ax.set_axis_off() # 座標軸を消す\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -240,7 +240,7 @@
         "ax.plot(8,2,marker='*',color='orange',markersize='50')\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,7 +298,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -340,7 +340,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -379,7 +379,7 @@
         "# color は rgb を指定するので、要素 3 の配列のリスト\n",
         "print( [np.random.random(3) for i in range(3)])"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +425,7 @@
         "cm = plt.get_cmap(cm_name)\n",
         "print(type(cm)) # matplotlib.colors.LinearSegmentedColormap"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +458,7 @@
         "# cm = plt.get_cmap() # 引数をブランクにして get_cmap を呼ぶとデフォルトのカラーマップになる\n",
         "# cm.name # viridis"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
         "cm(0) # (R,G,B,alpha) = (0.0, 0.0, 0.5, 1.0) \n",
         "# viridis の場合 (0.267004, 0.004874, 0.329415, 1.0)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +516,7 @@
         "    Bs.append(cm(n)[2])\n",
         "    As.append(cm(n)[3])"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +530,7 @@
         "# 2d array (for imshow)\n",
         "gradient_array = np.vstack((gradient, gradient))  # 2 * 256 の配列"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +547,7 @@
         "g = np.linspace(0,1,11)\n",
         "np.vstack((g,g))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
         "ax2.imshow(gradient_array, aspect='auto', cmap=cm)\n",
         "ax2.set_axis_off()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,7 +622,7 @@
         "cm10 = plt.get_cmap(cm_name,10)\n",
         "print(cm10.N) # 10"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,7 +674,7 @@
         "ax2.imshow(gradient10_array, aspect='auto', cmap=cm10)\n",
         "ax2.set_axis_off()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -710,7 +710,7 @@
         "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
         "fig.tight_layout()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -763,7 +763,7 @@
         "cbar = plt.colorbar(orientation='horizontal', extend='neither', ticks=list_ticks)\n",
         "cbar.ax.set_xticklabels(list_label, rotation=45, fontsize = 14)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +814,7 @@
         "\n",
         "cm = LinearSegmentedColormap.from_list(name='google', colors=[c1, c2, c3, c4])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +827,7 @@
         "values = [0, 0.05, 0.10, 0.20, 0.50, 0.80, 0.90, 0.95, 1.00]\n",
         "norm = BoundaryNorm(values, ncolors=cm.N)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -850,7 +850,7 @@
         "print(norm(0.50)) # 145\n",
         "print(norm(0.51)) # 145"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,7 +906,7 @@
         "ax4.imshow(gradient_array, aspect='auto', cmap=cm)\n",
         "ax4.set_axis_off()"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -949,7 +949,7 @@
         "print(normT(-1))     #   0\n",
         "print(normT(2))      # 255"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,7 +974,7 @@
         "cm.set_over('purple')\n",
         "cm.set_under('gray')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1024,7 +1024,7 @@
         "cax = fig.add_axes((0.1,0.1,0.8,0.05))\n",
         "fig.colorbar(im,cax=cax, orientation='horizontal', extend='both')"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1162,7 +1162,7 @@
         "# plt.savefig(\"temp.svg\", format=\"svg\") \n",
         "plt.show()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1236,7 +1236,7 @@
         "plt.plot(data)\n",
         "plt.show()"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2647,21 +2647,27 @@
         "id": "fAK4dxqLHRA8"
       },
       "source": [
-        "# 座標軸を消す ax.set_axis_off() を発見!!!!\n",
+        "# 座標軸を消す\n",
         "\n",
-        "どうやって発見したかを書いておこう。 dir(ax) で subplot で作られた描画領域にどんなメソッドがあるか見れる。その中に set_axis_off というのがあったので使ってみて見つけた。\n",
+        "座標を消す、座標をなくす、座標を見えなくする、座標の位置を変える、x軸、y軸の位置を変える、枠をなくす、など。\n",
         "\n",
-        "使ってみて、それからhelpでdocstringを読んで、それで完璧。\n",
+        "ax.set_axis_off()\n",
         "\n",
-        "matplotlibはpythonのモジュールなので、pythonのhelpやdirが使えるので、マニュアルがなくても、マニュアルに細かいことが書いてなくても、やりたいことが言語化できれば探せる。\n",
+        "x.axis(\"off\") \n",
         "\n",
-        "ax.axis(\"off\") でも消えるって。 => 消えたけど、plt.show()したら消えてなかった。ax.set_axis_off()の方がいいね。 => plt.axis(\"off\") しか使えない状況 (ax を作っていない) 場合もあるので使える。\n",
+        " plt.axis(\"off\") \n",
         "\n",
-        "もう一つ、pylab.box(False) というのを使っている人がいた。これも import するモジュールが１つ増えるのでボツ。\n",
+        "pylab.box(False) \n",
         "\n",
-        "cf. 座標を消す、って他にどういう言い方があるか。サブプロットの軸をオフにする。\n",
-        "axes.get_xaxis().set_visible() を使用し、Y 軸の軸をオフにするには、axes.get_yaxis().set_visible() メソッドを使用します。\n",
-        "とか。\n",
+        "axes.get_xaxis().set_visible() \n",
+        "\n",
+        "ax.spines を使う\n",
+        "* ax.spines['left'].set_position(('data', 0)) \n",
+        "* ax.spines['right'].set_visible(False) \n",
+        "* ax.spines['top'].set_visible(False)\n",
+        "* ax.spines['bottom'].set_position(('data', 0))\n",
+        "\n",
+        "\n",
         "https://www.delftstack.com/ja/howto/matplotlib/how-to-turn-off-the-axes-for-subplots-in-matplotlib/\n"
       ]
     },
