Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSSR0S8/6zPn0OEFZverEJ",
+      "authorship_tag": "ABX9TyPZtk6EwxiaVfudWw3DQzU8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -302,11 +302,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "e3mxhnUK2rXU",
-        "outputId": "8a8b0c3b-e99b-4090-d0d7-03bd3d74998f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 59
-        }
+        },
+        "outputId": "8a8b0c3b-e99b-4090-d0d7-03bd3d74998f"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -319,7 +319,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -386,7 +386,11 @@
       "source": [
         "三段論法 \n",
         "\n",
-        "実際の証明では、"
+        "実際の証明では、いくつかの中間結果を導き、それを利用して多段に証明を行う。 例えば $p=\\mathrm T $ から $q = \\mathrm T$ が証明でき、さらに  $q = \\mathrm T$ から $r = \\mathrm T$ が証明できれば、 $p=\\mathrm T $ から $r = \\mathrm T$ が証明できることになる。\n",
+        "\n",
+        "これは三段論法の 1 つである。\n",
+        "\n",
+        "数学に重要な形式は"
       ]
     }
   ]
