--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP7BbYuoJAAzvHi1qP9dMXQ",
+      "authorship_tag": "ABX9TyOfPWVsFQkbWMK+gcXo5wy9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,7 +390,9 @@
         "\n",
         "これは三段論法の 1 つである。\n",
         "\n",
-        "数学に重要な形式は前提に含意命題を含む仮言"
+        "数学に重要な形式は前提に含意命題を含む仮言的三段論法である。\n",
+        "\n",
+        "$\\tag {1.28}$"
       ]
     }
   ]
