Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOfPWVsFQkbWMK+gcXo5wy9",
+      "authorship_tag": "ABX9TyON4+4PoDCp7B2nay7cYlUc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,7 +392,22 @@
         "\n",
         "数学に重要な形式は前提に含意命題を含む仮言的三段論法である。\n",
         "\n",
-        "$\\tag {1.28}$"
+        "$$\\begin{array}{lr}\n",
+        "$\\quad p \\rightarrow q = \\mathrm T$ と $p = \\mathrm T$ から $q = \\mathrm T$ を示す & (1.28) \\\\\n",
+        "$\\quad p \\rightarrow q = \\mathrm T$ と $q \\rightarrow r = \\mathrm T$ から $p \\rightarrow q = \\mathrm T$ を示す & (1.29)\n",
+        "\\end{array{}$$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JIYIZ2xKLgGZ"
+      },
+      "source": [
+        "$$\\begin{array}{lr}\n",
+        "$\\quad p \\rightarrow q = \\mathrm T$ と $p = \\mathrm T$ から $q = \\mathrm T$ を示す & (1.28) \\\\\n",
+        "$\\quad p \\rightarrow q = \\mathrm T$ と $q \\rightarrow r = \\mathrm T$ から $p \\rightarrow q = \\mathrm T$ を示す & (1.29)\n",
+        "\\end{array{}$$"
       ]
     }
   ]
