Colaboratory を使用して作成しました

--- a/linear_numpy_short.ipynb
+++ b/linear_numpy_short.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_numpy_short.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNL12jZ5p+A155uRyK25stR",
+      "authorship_tag": "ABX9TyPiLkNL2QYzdnvBdggQ0q3O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,40 +28,30 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JcmBEmBIH4Bn"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "h_T1InIcHoKs"
       },
       "source": [
-        "# Linear algebra with Numpy\n",
+        "# numpy と 線形代数\n",
         "\n",
-        "It is possible to do symbolic linear algebrea with [Sympy](http://www.sympy.org/en/index.html) but for numeric computations [Numpy](http://www.numpy.org/) is a high performance library that should be used. \n",
+        "線形代数を学ぶには numpy と sympy の両方が必要である。 numpy でないと機械学習なのど高速な計算ができないし、sympy でないと数式処理ができない。\n",
         "\n",
-        "Here is how it is described: \n",
+        "* 行列計算\n",
+        "* 行列方程式を解く\n",
+        "* 逆行列と行列式を計算する\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ciKsLyqgbn0C"
+      },
+      "source": [
+        "# 行列計算\n",
         "\n",
-        "> NumPy is the fundamental package for scientific computing with Python. It contains among other things: [...]\n",
-        " useful linear algebra, Fourier transform, and random number capabilities.\n",
-        "\n",
-        "In this section we will see how to:\n",
-        "\n",
-        "- Manipulate matrices;\n",
-        "- Solve Matrix equations;\n",
-        "- Calculate Matrix inverse and determinants.\n",
-        "\n",
-        "## Manipulating matrices\n",
-        "\n",
-        "It is straightforward to create a Matrix using Numpy. Let us consider the following as a examples:\n",
+        "次の例を考える\n",
         "\n",
         "$$\n",
         "A = \\begin{pmatrix}\n",
@@ -77,112 +67,142 @@
         "4 & 4 & 5\\\\\n",
         "5 & 5 & 1\n",
         "\\end{pmatrix}\n",
-        "$$\n",
-        "\n",
-        "\n",
-        "First, similarly to Sympy, we need to import Numpy:"
+        "$$\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "b3rUpd1mHoKy"
-      },
-      "source": [
-        "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Y4hUaYMyHoK0"
+        "id": "uAjtjnH7b2UF"
       },
       "source": [
-        "Now we can define $A$:"
+        "numpy を使うためには import する必要がある。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "collapsed": true,
-        "id": "P3AU6USQHoK1"
+        "id": "b3rUpd1mHoKy",
+        "outputId": "1fd55557-3e94-412d-ba5f-80c26c3752dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "import numpy as np\n",
         "A = np.matrix([[5, 6, 2],\n",
         "               [4, 7, 19],\n",
-        "               [0, 3, 12]])"
+        "               [0, 3, 12]])\n",
+        "B = np.matrix([[14, -2, 12],\n",
+        "               [4, 4, 5],\n",
+        "               [5, 5, 1]])\n",
+        "print(A)\n",
+        "print(B)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 5  6  2]\n",
+            " [ 4  7 19]\n",
+            " [ 0  3 12]]\n",
+            "[[14 -2 12]\n",
+            " [ 4  4  5]\n",
+            " [ 5  5  1]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lQB9DUt-dAno"
+      },
+      "source": [
+        "同じことを sympy でやってみると次のようになる。"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D1FMAboJHoK2",
-        "outputId": "cc177464-42c3-42bc-ce67-6869cc925a47"
+        "id": "QYkaSJIFcWIW",
+        "outputId": "49ff43a3-c806-4771-8b1d-8e4571b06f95",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        }
       },
       "source": [
-        "A"
+        "# 同じことを sympy でやってみると\n",
+        "from sympy import *\n",
+        "A_sympy = Matrix([[5, 6, 2],\n",
+        "               [4, 7, 19],\n",
+        "               [0, 3, 12]])\n",
+        "B_sympy = Matrix([[14, -2, 12],\n",
+        "               [4, 4, 5],\n",
+        "               [5, 5, 1]])\n",
+        "display(A_sympy)\n",
+        "display(B_sympy)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 6 & 2\\\\4 & 7 & 19\\\\0 & 3 & 12\\end{matrix}\\right]$",
             "text/plain": [
-              "matrix([[ 5,  6,  2],\n",
-              "        [ 4,  7, 19],\n",
-              "        [ 0,  3, 12]])"
+              "Matrix([\n",
+              "[5, 6,  2],\n",
+              "[4, 7, 19],\n",
+              "[0, 3, 12]])"
             ]
           },
           "metadata": {
             "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}14 & -2 & 12\\\\4 & 4 & 5\\\\5 & 5 & 1\\end{matrix}\\right]$",
+            "text/plain": [
+              "Matrix([\n",
+              "[14, -2, 12],\n",
+              "[ 4,  4,  5],\n",
+              "[ 5,  5,  1]])"
+            ]
           },
-          "execution_count": 3
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "collapsed": true,
-        "id": "Poiz9j2gHoK3"
+        "id": "Ag1jqg1idMrr",
+        "outputId": "f604d8fc-e5a4-49fa-eda5-e7bf39a92cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "B = np.matrix([[14, -2, 12],\n",
-        "               [4, 4, 5],\n",
-        "               [5, 5, 1]])"
+        "print(A)"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NHKwEwS5HoK4",
-        "outputId": "961eaf3c-8d85-49da-f46b-892f50d1a166"
-      },
-      "source": [
-        "B"
-      ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "matrix([[14, -2, 12],\n",
-              "        [ 4,  4,  5],\n",
-              "        [ 5,  5,  1]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "output_type": "stream",
+          "text": [
+            "[[ 5  6  2]\n",
+            " [ 4  7 19]\n",
+            " [ 0  3 12]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -192,13 +212,13 @@
         "id": "jwCCQLYtHoK5"
       },
       "source": [
-        "We can obtain the following straightforwardly:\n",
+        "次の計算をする\n",
         "\n",
-        "- $5A$ (or any other scalar multiple of $A$);\n",
-        "- $A ^ 3$ (or any other exponent of $A$);\n",
-        "- $A + B$;\n",
-        "- $A - B$;\n",
-        "- $AB$"
+        "* $5A$ (or any other scalar multiple of $A$);\n",
+        "* $A ^ 3$ (or any other exponent of $A$);\n",
+        "* $A + B$;\n",
+        "* $A - B$;\n",
+        "* $AB$"
       ]
     },
     {
@@ -614,9 +634,9 @@
         "\n",
         "In this section we have seen how to using Numpy:\n",
         "\n",
-        "- Manipulate matrices;\n",
-        "- Solve linear systems;\n",
-        "- Compute Matrix inverses and determinants.\n",
+        "* Manipulate matrices;\n",
+        "* Solve linear systems;\n",
+        "* Compute Matrix inverses and determinants.\n",
         "\n",
         "This again just touches on the capabilities of Numpy.\n",
         "\n",
